[package]
name = "Hermes"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"]}
tokio = { version = "1.49.0", features = ["full"] }
tempfile = "3.23.0"
dotenvy = "0.15.7"
once_cell = "1.21.3"
serde_json = "1.0.149"
tower-http = { version = "0.5", features = ["cors"] }
http = "1.4.0"
regex = "1.12.2"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing = "0.1.44"
crossbeam-channel = "0.5.15"
